# toaster

./: .gitignore  README.md
backend/: implementation_plan.md  pyproject.toml  requirements.txt
backend/app/: circuit_solver.py  cv_engine.py  ml_manager.py  models.py
frontend/: implementation_plan.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ComponentList.css  ComponentList.tsx  NetlistViewer.css  NetlistViewer.tsx  UploadArea.css  UploadArea.tsx
