[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "ultralytics>=8.4.7",
    "uvicorn>=0.40.0",
]
